Modified Home layout CSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,8 @@
      font-family: "Open Sans", sans-serif;
  }
  
- body, .navbar {
+.navbar, .home-callout {
+  //Fradient provided by A little thing by @_ighosh
   background: #00d2ff; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #00d2ff , #3a7bd5); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #00d2ff , #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -31,3 +32,9 @@
   .navbar {
    border: none;
   }
+
+.home-callout {
+ color: white;
+ margin-top: -20px;
+ padding: 50px 0 100px 0;
+}
