Added font-awesome gem and logo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,16 @@
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
  
+ @import 'font-awesome-sprockets';
+ @import 'font-awesome';
+ 
+ //Typograohy Styles
  h1, h2, h3 {
      font-family: "Open Sans", sans-serif;
  }
  
+ 
+ //Background gradient
 .navbar, .home-callout {
   //Gradient provided by A little thing by @_ighosh
   background: #00d2ff; /* fallback for old browsers */
@@ -29,6 +35,8 @@
 
   }
   
+  
+  //Navbar styles
   .navbar {
    border: none;
   }
@@ -43,7 +51,7 @@
   
 
 
-
+//Home pages styles
 .home-callout {
  color: white;
  margin-top: -20px;
