Updated about page and logo style

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,6 @@
-<h1>About page</h1>
+<div class="container-fluid text-center">
+    <h1>About page</h1>
+    <p>We are DevMatch. Our compnay focuses on creating an exclusive community
+    for developers and entrepeneurs to meet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, blanditiis, officia, necessitatibus iusto alias esse nesciunt nemo soluta sequi magni nihil qui incidunt fuga tenetur et officiis tempora ducimus voluptatum.
+    </p>
+</div>
