--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@
  
  //Typograohy Styles
  h1, h2, h3 {
-     font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
  }
  
  
@@ -53,6 +53,19 @@
     opacity: 0.75;
    }
   }
+  
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+  }
+  
+  .navbar-default .navbar-toggle {
+    border: 2px solid white;
+      &:hover, &:focus {
+        background-color: #00c6ff;
+      }
+  }
+  
+  
   
 
 
